# crypto-sanctions-server

./: .dockerfile  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: client.rs  database.rs  logger.rs  main.rs  server.rs  updater.rs
